--- a/{{cookiecutter.project_slug}}/build.gradle
+++ b/{{cookiecutter.project_slug}}/build.gradle
@@ -1,5 +1,4 @@
 buildscript {
-    ext.kotlin_version = "1.7.10"
     repositories {
         mavenCentral()
         maven {
@@ -14,12 +13,10 @@ buildscript {
         classpath("com.anatawa12.forge:ForgeGradle:1.2-1.0.+") {
             changing = true
         }
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 apply plugin: "forge"
-apply plugin: "kotlin"
 apply plugin: "java"
 apply plugin: "project-report"
 
@@ -29,15 +26,14 @@ file(projectBuildPropertiesFile).withInputStream { projectBuildProperties.load(i
 project.version = projectBuildProperties.version
 project.buildVersion = projectBuildProperties.buildVersion
 
-group 'com.dreamfinity.' + {rootProject.name}
+group '{{cookiecutter.group_id}}.' + {rootProject.name}
 version project.version
 
 minecraft {
     version = "1.7.10-10.13.4.1614-1.7.10"
     runDir = "run"
+    mappings = "{{cookiecutter.minecraft_mappings}}"
     replace("@version@": projectBuildProperties.version)
-    replace("@debug@": projectBuildProperties.debug)
-    replace("BuildController.internalBuildState()", isClientBuild)
 }
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
@@ -68,7 +64,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
     implementation 'org.dreamfinity:craftbukkit:1.7.10-R0.1:dev'
     implementation 'com.google.code.gson:gson:2.8.8'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 processResources {
@@ -184,14 +179,3 @@ tasks.register("DebugRun", GradleBuild) {
 
 DebugRun.finalizedBy("runCLient")
 DebugBuild.finalizedBy("build")
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
